Ensure blockquotes' left borders show up in high contrast mode

--- a/www/styles/_base.scss
+++ b/www/styles/_base.scss
@@ -95,6 +95,9 @@ blockquote {
         hsl(var(--color-hs-accent) 50%),
         hsl(var(--color-hs-highlight) 50%)
       );
+    @media (forced-colors: active) {
+      background-color: InfoBackground;
+    }
   }
 }
 
